# folder_sync

./: .gitignore  CMakeLists.txt  README.md
Client/: client.cpp  client.py  config.json
Server/: config.json  server.cpp
